Thu, Oct 16 2003 (1.4)
 * add link to gmime library to the README file
 * perl Makefile.PL would stop running if it fails to find gmime library
 * new filter: MIME::Fast::Filter::Windows

Wed, Oct 15 2003 (1.2)
 * fixed problem with enriched filter when compiled with gmime-2.1.0 (Thanks to Patel, Rupen)
 * update to gmime-2.1.0:
   - MIME::Fast::Utils::8bit_header_decode split into
     MIME::Fast::Utils::header_decode_text and MIME::Fast::Utils::header_decode_phrase
   - MIME::Fast::Utils::8bit_header_encode renamed to
     MIME::Fast::Utils::header_encode_text
   - MIME::Fast::Utils::8bit_header_encode_phrase renamed to
     MIME::Fast::Utils::header_encode_phrase
   - MIME::Fast::Charset::locale_name renamed to
     MIME::Fast::locale_charset
   - new function MIME::Fast::locale_language

Mon, Jul 28 2003 (1.1)
 * fixed a bad position of pTHX in gmime-stream-perlio.c

Mon, Jun 23 2003 (1.0.1)
 * polishing a code - drop unused variables, etc.
 * gmime-stream-perlio.c - fixed compilation problems with multithreaded perl

Sat, Jun 21 2003
 * fixed wrong HV interpretation in $parser->set_header_regex()
   Add new test paragraph for that case.

Mon, Jun 18 2003 (1.0.0)
 * split Fast.xs into separate classes located in Fast/ directory
 * new filter added - MIME::Fast::Filter::Enriched
 * new function MIME::Fast::Parser::[sg]et_persist_stream
 * objects unsupported in gmime (Message-Disposition and Message-MDN)
   are included but not compiled in (embraced with _UNSUPPORTED macros
   that can be enabled in Makefile.PL)
 * fixed a bug in construct_message when method used with parser argument
 * new enhanced test file t/parser.t
 * new subdirectory cincluse/ for gmime new functions
 * cleaned gmime-newfunc.c (set_date_from_string hardencoded info Fast/Message.xs)
 * new GMimeStreamPerlIO gmime plugin - this is used by the perl module
   as a default stream for file handles, as well as for all the PerlIO
   objects.