@@ -167,7 +167,7 @@ g_mime_message_get_header(message, field)
 void
 g_mime_message_set_mime_part(message, mime_part)
         MIME::Fast::Message	message
-        MIME::Fast::Part	mime_part
+        MIME::Fast::Object	mime_part
     CODE:
         g_mime_message_set_mime_part(message, GMIME_OBJECT (mime_part));
         plist = g_list_remove(plist, mime_part);
