@@ -25,7 +25,7 @@ Bugs and questions should be mailed to the author.
 
 Author: Piotr Klaban <post@klaban.torun.pl>
 
-Copyright 2001,2002,2003 Piotr Klaban
+Copyright 2001,2002,2003,2004 Piotr Klaban
 
 This library is free software; you can redistribute it and/or
 modify it under the same terms as Perl itself or under GPL version 2.
